topu : post recruitment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=topu
 
 # database
-spring.datasource.url=jdbc:h2:mem:backend;mode=mysql
+spring.datasource.url=jdbc:h2:mem:topu;mode=mysql
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
