--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,7 @@ spring:
     username: sa
     password:
     url: jdbc:h2:mem:kopherlog
+  data:
+    web:
+      pageable:
+        one-indexed-parameters: true
